# MSUProj

./: .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  CMakeLists_8txt.html  COPYING.txt  LICENSE.GDALLogoColor.txt  LICENSE.MSUProj.txt  LICENSE.txt  README.md  TODO.txt  annotated.html  classes.html  classlogoImage-members.html  classlogoImage.html  classmsumr_1_1MSUProj-members.html  classmsumr_1_1MSUProj.html  dir_8128c6327a9172ab6a1a348b35a5d05e.html  dir_8128c6327a9172ab6a1a348b35a5d05e_dep.map  dir_8128c6327a9172ab6a1a348b35a5d05e_dep.md5  dir_b2bca091c87127f5da307455ce418719.html  dir_b2bca091c87127f5da307455ce418719_dep.map  dir_b2bca091c87127f5da307455ce418719_dep.md5  dir_bdce64a5ddfcc6e302a4c64402970c94.html  dir_bdce64a5ddfcc6e302a4c64402970c94_dep.map  dir_bdce64a5ddfcc6e302a4c64402970c94_dep.md5  dir_d9974b2b040b67aeffd7c8bdb30a92da.html  dir_d9974b2b040b67aeffd7c8bdb30a92da_dep.map  dir_d9974b2b040b67aeffd7c8bdb30a92da_dep.md5  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  logoimage_8hpp.html  logoimage_8hpp__dep__incl.map  logoimage_8hpp__dep__incl.md5  (+27 more)
.tx/: config
cmake/: CPackProjectConfigFile.cmake.in  DoxygenTargets.cmake  FindGDAL.cmake  GDAL.cmake  InstallRuntime.cmake  InstallRuntimeScript.cmake.in  Locales.cmake  Packaging.cmake  documentation_locales.cmake  doxygen.cmake  gh-page.cmake  icons.cmake  packaging.cmake
doc/: CMakeLists.txt  description.txt  doxygen.conf.in  msuproj.css  translations.dox
doc/developer/: translations.dox
doc/msuproj-qt/: en.dox  fr_FR.dox  hu_HU.dox  ru_RU.dox
i18n/: msuproj-qt_fr_FR.ts  msuproj-qt_hu_HU.ts  msuproj-qt_ru_RU.ts
icons/: CMakeLists.txt
msuproj-cli/: CMakeLists.txt
msuproj-cli/src/: msuproj-cli.cpp
msuproj-qt/: CMakeLists.txt  icons.qrc.in  msuproj-qt.desktop.in
msuproj-qt/cmake/: FindQt.cmake  Locales.cmake
msuproj-qt/help/: CMakeLists.txt  en.dox  fr_FR.dox  msuproj.css  ru_RU.dox
msuproj-qt/src/: helpbrowser.cpp  helpbrowser.h  helpwindow.cpp  helpwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  warper.cpp  warper.h
msuproj-qt/translations/: CMakeLists.txt  msuproj-qt_en.ts  msuproj-qt_en_GB.ts  msuproj-qt_fr_FR.ts  msuproj-qt_hu_HU.ts  msuproj-qt_ru_RU.ts
package/: CMakeLists.txt  CPackProjectConfigFile.cmake  description.txt
package/qtifw/: component-msuproj.qs  component-msuproj_en.ts  component-msuproj_hu_HU.ts  component-msuproj_qt.qs  component-msuproj_ru_RU.ts  component-runtime_msvc.qs  controller.qs.in
res/icons/: icons.qrc.in
res/linux/: msuproj-qt.desktop.in
res/qtifw/: component-doc.qs  component-qt.qs  controller.qs.in
res/win32/: icons.rc.in  msuproj.rc.in  update_guid.txt
src/: CMakeLists.txt  info.h.in  logoimage.hpp  logomark.hpp  msugeo-cli.cpp  msugeo.cpp  msugeo.h  msuproj-cli.cpp  msuproj.cpp  msuproj.h
src/cli/: CMakeLists.txt  msuproj-cli.cpp
src/msuproj/: CMakeLists.txt  logoimage.hpp  msucore.cpp  msucore.h  msugcpgrid.cpp  msugcpgrid.h  msupixeltransformer.cpp  msupixeltransformer.h  msuproj.cpp  msuproj.h  msutriangle.cpp  msutriangle.h
src/qt/: CMakeLists.txt  helpbrowser.cpp  helpbrowser.h  helpwindow.cpp  helpwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  warper.cpp  warper.h
src/tools/: CMakeLists.txt  gcp-thiner.cpp  gcp-thinner.cpp  image2class.cpp
tools/: CMakeLists.txt
tools/src/: gcp-thinner.cpp  image2class.cpp
